frontend/web/css/styles.css
/* ... */
header .navbar {
  padding: 0;
}

header a {
  padding: 0;
  color: #cfcfe4;
  text-transform: uppercase;
}

header a:hover,
header a:focus {
  color: #2059ed;
}

header .dropdown-toggle::after {
  border-top-color: #2059ed;
}

header .social {
  font-size: 20px;
}

.search-form {
  position: relative;
}

.search-form input {
  width: 100%;
  padding: 6px 40px 6px 12px;
  color: #ffffff;
  background: transparent;
  border: 0;
  border-top: 1px solid #e0e5f1;
  border-top: 1px solid #e0e5f1;
  border-bottom: 1px solid #e0e5f1;
  border-bottom: 1px solid #e0e5f1;
}

.search-form button {
  position: absolute;
  top: 0;
  right: 0;
  left: auto;
  padding: 0;
  background: transparent;
  border: 0;
}

.search-form button img {
  height: 22px;
}

.social {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0 0 auto;
  padding: 0;
  list-style-type: none;
}

.social li {
  margin-left: 30px;
}

.social a {
  color: #626694;
}

.social a:hover {
  color: #2059ed;
}

footer {
  margin: 40px 0 0;
  padding-top: 40px;
  padding-bottom: 30px;
  background: url(../images/footer-bg.jpg) no-repeat center center;
  background-size: cover;
  border-top: 1px solid #7487dd;
}

.footer__contacts i {
  min-width: 25px;
}

footer .nav-item:first-child .nav-link {
  padding-left: 0;
}

footer .dropdown-toggle::after {
  display: none;
}

footer .dropdown .dropdown-menu {
  position: absolute;
  top: 100%;
  z-index: 10;
  left: -105px !important;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 12px 0 0;
  padding: 20px 0 0;
  background: transparent;
  border-top: 1px solid #cfcfe4;
}

footer .dropdown .dropdown-menu .dropdown-item {
  margin-right: 30px;
  padding-right: 0;
  padding-left: 0;
  font-size: 14px;
}

footer .dropdown .dropdown-menu .dropdown-item.active {
    background-color: unset;
    color: #6892ff;
}

footer .logo {
  display: block;
  margin: 0 0 45px;
}

footer .social {
  margin: 0 0 20px;
}

footer .social li {
  margin-right: 30px;
  margin-left: 0;
}

footer ul {
  list-style-type: none;
  text-transform: uppercase;
}

footer a {
  color: #ffffff;
}

footer a:hover,
footer a:focus {
  color: #2059ed;
}

.footer-menu {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  font-weight: 700;
  font-size: 18px;
  text-transform: uppercase;
}

.footer-menu > li {
  margin-right: 10px;
}

.footer-menu ul {
  position: absolute;
  top: 100%;
  left: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 20px 0 0;
  padding: 20px 0 0;
  font-weight: 400;
  font-size: 14px;
  border-top: 1px solid #cfcfe4;
}

.footer-menu ul li {
  margin-right: 30px;
}

.footer-menu ul li:last-child {
  margin: 0;
}

.footer-menu ul a {
  color: #cfcfe4;
}

.footer-menu ul a:hover,
.footer-menu ul a:focus {
  color: #2059ed;
}

.copyright {
  text-align: right;
  color: #cfcfe4;
}

.job-page {
  background: url(../images/header-bg.png) no-repeat top right;
}

.job-page .contact-us {
  background: #e0e5f1;
}

.job-page .contact-us:before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  z-index: 1;
  height: 200px;
  background: #ffffff;
}

.job-page .contact-us .section-title {
  color: #3f405f;
}

.vacancy i {
  font-size: 20px;
}

.job-list {
  padding: 60px 0 0;
  color: #7a7a80;
  background: #ffffff;
}

.job-list .collapse:after,
.job-list .collapsing:after {
  content: "";
  display: block;
  height: 30px;
}

.job-list .job-title {
  margin: 0;
  padding: 0 0 30px;
  font-weight: 700;
  font-size: 30px;
  color: #3f405f;
  cursor: pointer;
}

.job-list .job-title:hover {
  color: #2059ed;
}

.job-list .job-title span {
  display: block;
  font-size: 18px;
  color: #747a89;
}

.category-list {
  color: #4a4a4c;
  background: #ffffff;
}

.category-list .item {
  padding: 60px 0;
}

.category-list .item:nth-child(odd) {
  background: #e0e5f1;
}

.category-list .item:nth-child(even) .container {
  grid-template-areas: "img title"
  "img desc"
  "img btn";
}

.category-list .container {
  display: grid;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 30px;
  grid-row-gap: 30px;
  grid-template-areas: "title img"
  "desc img"
  "btn img";
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto;
}

.category-list .title {
  align-self: end;
  margin: 0 0 10px;
  font-size: 36px;
  color: #3f405f;
  grid-area: title;
}

.category-list .img {
  margin: 0 auto;
  grid-area: img;
  object-fit: scale-down;
  max-width: 400px;
}

.category-list .desc {
  grid-area: desc;
}

.category-list .btn {
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  align-self: start;
  width: 320px;
  max-width: 100%;
  grid-area: btn;
}

.category-page {
  background: url(../images/header-bg.png) no-repeat top right;
}

.category-page .h2 {
  margin: 0 0 30px;
  font-size: 36px;
}

.how-box {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 0 20px;
  padding: 25px 15px;
  font-weight: 700;
  font-size: 24px;
  color: #dfdfef;
  background: #3a447f;
}

.how-box img {
  margin-right: 20px;
}

.contact-us {
  position: relative;
  padding: 30px 0 60px;
  font-size: 18px;
  background: url(../images/contact-bg.png) no-repeat right bottom;
  background-size: contain;
}

.contact-us > * {
  position: relative;
  z-index: 2;
}

.contact-us .section-title {
  color: #ffffff;
}

.contact-us form {
  position: relative;
  min-height: 380px;
  margin: 20px 40px;
  padding: 40px;
  color: #ffffff;
  background: #33386c;
}
/* ... */

